Replaced ngRoute with Angular UI Route, ui.router. Changed location of templates from src/main/resources/view to assets/javascrit as it is easier to work while developing a module

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -36,7 +36,7 @@
 		</div>
 	</nav>
 	<div class="container">
-		<div ng-view></div>
+		<div ui-view></div>
 	</div>
 	<div class="footer" role="contentinfo"></div>
 
